<resources>
    <string name="app_name">Kim_J-Project3</string>
    <string name="sign_up_log_in">Sign Up / Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_info">Register Info</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="age">Age</string>
    <string name="height_in">Height (in)</string>
    <string name="new_account">New Account</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meals">Meals</string>
    <string name="hydration">Hydration</string>
    <string name="summary">Summary</string>
    <string name="steps">Steps</string>
    <string name="name">Name</string>
    <string name="calories">Calories</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="time">Time</string>
    <string name="ml">mL</string>
    <string name="no_meals_entered">No Meals Entered</string>
    <string name="no_drink_logs_entered">No Drink Logs Entered</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="date">Date</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="edit">Edit</string>
</resources>