<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_liquid_time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/time"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_liquid_ml"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/ml"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/edit_liquid_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/edit_liquid_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

    </LinearLayout>

</LinearLayout>
