<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mealTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meals" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/hydrationTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydration" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/summaryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/stepsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:name="com.example.kim_j_project3.MealFragment"
        tools:layout="@layout/fragment_meal" />

</androidx.constraintlayout.widget.ConstraintLayout>
