<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#E8DFF7"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/height"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/weight"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/bmiTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/bmi"
                android:textSize="20sp"
                android:gravity="center" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/summary_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            tools:listitem="@layout/summary_item" />
    </LinearLayout>


</FrameLayout>